--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ layout: default
         {% for post in site.posts %}
         <li>
             <span class="date">{{ post.date | date: '%Y %b %d' }}</span> - <a href="{{ post.url }}">{{ post.title }}</a>
+            {% if post.status == "draft" %}
+            - DRAFT
+            {% endif %}
         </li>
         {% endfor %}
     </ul>
